<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menuHome"
        android:icon="@drawable/ic_home"
        android:title="@string/home"/>

    <item android:id="@+id/menuProfile"
        android:icon="@drawable/ic_profile_icon"
        android:title="@string/profile"/>

    <item android:id="@+id/menuLogout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout"/>

    <item android:title="@string/others">
        <menu>
            <item android:id="@+id/menuAbout"
                android:icon="@drawable/ic_about"
                android:title="@string/about"/>

            <item android:id="@+id/menuShare"
                android:icon="@drawable/ic_share"
                android:title="@string/share"/>

        </menu>
    </item>

</menu>